--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,4 +1,44 @@
 .theme-card{
   border-radius: 20px 0 20px 0;
   overflow: hidden;
+  position: relative;
+  &::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba($color: #212529, $alpha: 0.4);
+    transition: opacity 0.3s;
+  }
+  &:hover::before{
+    opacity: 1;
+  }
 }
+
+.hito-content {
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 217px;
+    height: 76px;
+    background-image: url(/assets/images/bg-1.png);
+  }
+
+  &::after {
+  content: "";
+  position: absolute;
+  right: -20px;
+  bottom: 0;
+  display: block;
+  width: 300px;
+  height: 196px;
+  background-image:url(/assets/images/bg-2.png);
+  }
+} 
