--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,30 +1,30 @@
 <nav class="navbar navbar-expand-lg">
-    <div class="container mt-8 nav-border">
-      <a class="navbar-brand" href="index.html">
+    <div class="container mt-8 nav-border align-items-cente">
+      <a class="navbar-brand " href="index.html">
         <img src="/assets/images/vivre-logo.svg" alt="vivre-logo">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form class="d-flex me-auto" role="search">
-            <input class="form-control me-2 rounded-pill py-2 px-4" type="search" placeholder="搜尋文章" aria-label="search">
-            <button class="btn nav-btn" type="submit">
+      <div class="collapse navbar-collapse mt-4 align-items-sm-center" id="navbarSupportedContent">
+        <div class="d-flex mb-sm-6 mb-lg-0">
+            <input class="form-control me-2 rounded-pill py-2 px-4 pe-lg-5" type="search" placeholder="搜尋文章" aria-label="search">
+            <button class="btn nav-btn border-0" type="submit">
               <span class="material-symbols-outlined">search</span>
             </button>
-          </form>
+        </div>
         <ul class="navbar-nav mb-2 mb-lg-0 ms-auto align-items-lg-center">
-          <li class="nav-item">
-            <a class="nav-link me-5" aria-current="page" href="#">所有文章</a>
+          <li class="nav-item ps-sm-3">
+            <a class="nav-link p-lg-3 pb-sm-6" aria-current="page" href="#">所有文章</a>
+          </li>
+          <li class="nav-item ps-sm-3">
+            <a class="nav-link p-lg-3 pb-sm-6" href="#">訂閱方案</a>
+          </li>
+          <li class="nav-item ps-sm-3">
+            <a class="nav-link p-lg-3 pb-sm-6" href="#">關於我們</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-5" href="#">訂閱方案</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link me-5" href="#">關於我們</a>
-          </li>
-          <li class="nav-item">
-            <button class="btn btn-secondary-200 fs-lg-7 text-white" type="button">
+            <button class="btn btn-secondary-200 fs-lg-7 text-white w-100" type="button">
               登入 / 註冊
             </button>
           </li>
