--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -19,16 +19,20 @@
   }
 }
 
+
 .hito-content {
   &::before {
     content: "";
     position: absolute;
     left: 0;
     bottom: 0;
-    display: block;
+    display: none;
     width: 217px;
     height: 76px;
     background-image: url(/assets/images/bg-1.png);
+    @include large{
+      display: block;
+    }
   }
 
   &::after {
@@ -40,5 +44,9 @@
   width: 300px;
   height: 196px;
   background-image:url(/assets/images/bg-2.png);
+
+  @include large {
+    right: -20px;
   }
-} 
+}
+}
