--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -10,6 +10,7 @@
 @import "bootstrap/scss/utilities/api";
 
 @import "./base/base.scss";
+@import "./helper/mixin.scss";
 @import './layout/header.scss';
 @import './layout/footer.scss';
 
