--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -26,12 +26,12 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    display: none;
+    display: block;
     width: 217px;
     height: 76px;
     background-image: url(/assets/images/bg-1.png);
     @include large{
-      display: block;
+      display: none;
     }
   }
 
@@ -46,7 +46,52 @@
   background-image:url(/assets/images/bg-2.png);
 
   @include large {
-    right: -20px;
+    display: none;
   }
 }
+}
+
+.momtext{
+  color: $primary-400;
+}
+@include large {
+  .momtext{
+    color: $accent-200;
+}
+}
+
+
+.con-btn{
+  padding: 4px 16px;
+}
+.line{
+  border: 1px solid #6C757D;
+  width: 80px;
+  height: 1px;
+}
+
+
+.card-img-top{
+  height: 192px;
+}
+
+.nav{
+  background: white;
+  border-radius: 12px;
+  padding: 30px;
+}
+
+.nav-link{
+  border-radius: 4px;
+}
+
+.nav-link:hover{
+  background: $accent-100;
+
+}
+
+.hots-img{
+  width: 100%;
+  border-radius: 20px;
+  overflow: hidden;
 }
