--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,4 @@
-<footer class="footer">我是 footer</footer>
+<footer class="container mb-lg-5">
+    <div class="border-top"></div>
+    <p class="text-center text-gray-400 mt-lg-5">©Vivre 2024 All right Reserved</p>
+</footer>
