--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,4 +1,7 @@
-<footer class="container mb-lg-5">
+<footer>
     <div class="border-top"></div>
-    <p class="text-center text-gray-400 mt-lg-5">©Vivre 2024 All right Reserved</p>
+    <div class="container my-lg-5 my-4">
+    <p class="text-center text-gray-400">©Vivre 2024 All right Reserved</p>
+    </div>
+    
 </footer>
