--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg">
-    <div class="container mt-8 nav-border align-items-cente">
-      <a class="navbar-brand " href="index.html">
-        <img src="/assets/images/vivre-logo.svg" alt="vivre-logo">
+<nav class="navbar navbar-expand-lg py-0">
+    <div class="container mt-8 nav-border align-items-center">
+      <a class="navbar-brand" href="index.html">
+        <img class="ms-2" src="/assets/images/vivre-logo.svg" alt="vivre-logo">
       </a>
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
